--- a/src/index.css
+++ b/src/index.css
@@ -21,10 +21,17 @@ a {
 
 h1 {
   font-size: 35px;
+  font-weight: bold;
 }
 
 h2 {
   font-size: 32px;
+  font-weight: bold;
+}
+
+h3 {
+  font-size: 29px;
+  font-weight: bold;
 }
 
 p,
